<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".HCF">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:paddingLeft="15dp"
        android:text="@string/hcf_of_two_numbers_heading"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etFirstNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:hint="@string/enter_first_number"
        android:inputType="numberSigned"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/etSecondNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:hint="@string/enter_second_number"
        android:inputType="numberSigned"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnHCF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1"
        android:text="HCF" />

    <TextView
        android:id="@+id/tvAboutHCF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_weight="40"
        android:fontFamily="cursive"
        android:justificationMode="inter_word"
        android:paddingLeft="15dp"
        android:text="@string/about_HCF"
        android:textColor="#333"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>